--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "private": true,
   "homepage": "https://Doria15.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet-async": "^2.0.4",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
